--- a/CSS/style.css
+++ b/CSS/style.css
@@ -168,7 +168,7 @@ footer img {
   border: 0;
 }
 
-@media screen and (max-width: 1920px) {
+@media screen and (min-width: 880px) {
   .cntr {
     width: 70%;
   }
