--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,7 @@ html {
 }
 
 body {
+  min-width: 320px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,10 +39,12 @@ main,
 footer {
   margin: 25px 15px;
   width: 90%;
+  
 }
 
 header {
   width: 100%;
+  margin: 25px 10%;
   display: flex;
   flex-direction: column;
 }
@@ -51,7 +54,9 @@ header {
 }
 
 .header-container {
+  width: 80%;
   display: flex;
+  justify-content: center;
 }
 
 .header-container img {
@@ -109,7 +114,7 @@ h1 {
 
 h2 {
   margin: 5px 0 0 0;
-  padding: 0 0 0 25px;
+  padding: 0 0 0 30px;
   background: linear-gradient(to left, var(--bg2), var(--bg-h2) 100%);
   transform: skew(353deg) translateX(-50px);
   color: var(--bg1);
@@ -120,15 +125,10 @@ h4 {
   margin: 5px 0 0 -10px;
 }
 
-pre{
-  width: 100%;
-  overflow-x: scroll;
-  background-color: var(--bg1);
-}
-
 .h1 {
   flex-grow: 5;
   text-align: center;
+  margin: 5% 0;
 }
 
 section {
@@ -147,7 +147,7 @@ section {
 }
 .slider,
 .whack {
-  width: 95%;
+  width: 98%;
 }
 
 .video {
@@ -184,17 +184,11 @@ footer img {
     width: 75%;
   }
 }
-/*
-@media screen and (min-width: 550px) and (max-width: 800px){
-  .cntr {
-    width: 75%;
-  }
-}
-*/
+
 @media screen and (min-width: 256px) and (max-width: 550px) {
   .cntr {
-    width: 100%;
-    box-shadow: inset 3px 0 50px -30px;
+    width: 90%;
+    box-shadow: 3px 0 50px -30px;
   }
   .header-container {
     flex-direction: column;
@@ -206,8 +200,8 @@ footer img {
     border-radius: 2%;
   }
   h2 {
-    padding: 0 0 0 40px;
-    transform: skew(353deg) translateX(-40px);
+    padding: 0 0 0 30px;
+    transform: skew(353deg) translateX(-50px);
   }
 }
 
